<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogo"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".lookup">

    <!-- EditText for entering the keyword -->
    <EditText
        android:id="@+id/keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_keyword"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginBottom="16dp" />

    <!-- Button to trigger the search -->
    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/keyword"
        android:text="Search"
        android:onClick="search"/>

    <!-- RecyclerView to display search results -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <!-- Button to return to home -->
    <Button
        android:id="@+id/return_home"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:background="@drawable/roundedbutton"
        android:onClick="navigateToStaff"
        android:text="@string/home"
        android:textColor="#ffffff"
        android:textSize="15dp" />

    <!-- ProgressBar for loading indicator -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <!-- TextView for displaying "No results" message -->
    <TextView
        android:id="@+id/textViewNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        android:visibility="gone" />

</LinearLayout>
