<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogo"
    tools:context=".manageproducts">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.9"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="95dp"
                android:layout_marginTop="86dp"
                android:layout_marginEnd="96dp"
                android:background="@android:color/black"
                android:onClick="navtoadd"
                android:text="@string/add_a_product"
                android:textAlignment="gravity"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/add_24"
                app:iconGravity="top"
                app:iconSize="50dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_below="@+id/add"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="102dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="89dp"
                android:onClick="navtodelete"
                android:text="@string/delete_a_product"
                android:textAlignment="gravity"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/delete"
                app:iconGravity="top"
                app:iconSize="50dp" />

            <Button
                android:id="@+id/return_home"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/delete"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="108dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/roundedbutton"
                android:onClick="navigateToAdmin"
                android:text="@string/home"
                android:textColor="#ffffff"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
